--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,19 @@
 {
-  "name": "Student Tracker",
-  "short_name": "Tracker",
-  "start_url": "index.html",
+  "name": "Student Attendance Tracker",
+  "short_name": "Attendance",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#007bff",
+  "theme_color": "#2196f3",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
